# cath-classification-cnn

./: .gitignore  Dockerfile  README.md  mlflow_experiments.py  protein_class_prediction_data.py  pyproject.toml
dev/: eda_training.ipynb  final_model.keras
src/: README.md  cath_data.py  main.py  mlflow_experiments.py  models.py  utils.py
src/models/: __init__.py  experimental_models.py
src/utils/: __init__.py  cath_data.py  process_data.py
