[project]
name = "cath_classification_cnn"
version = "0.1.0"
description = "Experiment tracking Keras NNs/CNNs with mlflow for protein classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "mlflow>=2.20.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "tensorflow>=2.18.0",
]

[tool.setuptools]
packages = ["src"]
